# sfml_sample

./: .gitignore  CMakeLists.txt  main.cpp  sfml-debug.props  sfml-release.props  sfml_sample.sln
animated_sprite/: animated_sprite.vcxproj  animated_sprite.vcxproj.filters  game.cpp  game.h  main.cpp
running_circle/: core.cpp  core.h  main.cpp  running_circle.vcxproj  running_circle.vcxproj.filters
